cursor weg en value img wrap fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
         html {
             scroll-behavior: smooth;
-            cursor: url("assets/muisje.png") 16 16, auto;
+            /*cursor: url("assets/muisje.png") 16 16, auto;*/
             width: 80vw;
             margin: 0 auto;
         }
@@ -567,7 +567,7 @@
     max-height: 85%;
 }
 
-a:hover,
+/* a:hover,
 button:hover,
 .image-box:hover,
 .video-box:hover,
@@ -576,4 +576,4 @@ nav ul li a:hover,
 .value-image-wrap img:hover,
 .close:hover {
     cursor: url("assets/pointerold.png") 16 16, pointer !important;
-}
+} */
